netbox/housekeeping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox-housekeeping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netbox
      role: housekeeping
  template:
    metadata:
      labels:
        app: netbox
        role: housekeeping
    spec:
      containers:
        - name: housekeeping
          image: docker.io/netboxcommunity/netbox
          args:
            - /opt/netbox/housekeeping.sh
