netbox/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netbox
      role: server
  template:
    metadata:
      labels:
        app: netbox
        role: server
    spec:
      containers:
        - name: server
          image: docker.io/netboxcommunity/netbox:v3.6.7
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              port: http
              path: /api/status/
            periodSeconds: 5
            failureThreshold: 3
