netbox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox
  labels:
    app: netbox
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
  selector:
    app: netbox
    role: server
